GNOME Bugzilla – Bug 679292
eject icon isn't inverted when selected
Last modified: 2012-07-21 12:09:30 UTC
The eject icon in the places sidebar isn't inverted when selected. This seems to be related to: * not using an icon-name data model for the cell renderer * the code used to special case prelighting the icon
Created attachment 217895 [details] [review] Make eject icon invert when selected
This patch is just an example that allows invert to work. Unfortunately, it breaks prelight.
Created attachment 218341 [details] prior art - os x prelight
Created attachment 218342 [details] prior art - os x selection
Comment on attachment 217895 [details] [review] Make eject icon invert when selected Pushed to master a version that uses a GIcon instead of an icon name