Make eject icon invert when selected

https://bugzilla.gnome.org/show_bug.cgi?id=679292